# CORAL-G

./: .gitignore  CORAL_G_NODES.md  CORAL_G_RUN_AND_RESET_GUIDE.md  README.md  RESET_SIMULATION.md  RUN_SIMULATION.md  coral-g-full-context.md  lab_setup.sh  source_coral.sh
src/coral_g/: package.xml  setup.cfg  setup.py
src/coral_g/coral_g/: __init__.py  contract_check.py  contracts.py  core.py  ros_nodes.py
src/coral_g/launch/: coral_g_demo.launch.py
src/coral_g/tests/: test_contracts.py  test_core_flow.py
src/coral_g_interfaces/: CMakeLists.txt  package.xml
src/coral_g_interfaces/srv/: ResetReseed.srv
src/my_tb3_world/: setup.py
src/my_tb3_world/launch/: coral_g_nodes.launch.py  digital_twin_state_node.launch.py  gazebo_twin.launch.py  nav2_localization.launch.py  nav2_slam_navigation.launch.py  new_world.launch.py:Zone.Identifier  objectAvoidance_node.launch.py  publisher_node.launch.py  stateSync_node.launch.py  subscriber_node.launch.py  twin_input_node.launch.py
src/my_tb3_world/maps/: arena_map.pgm  arena_map.yaml
src/my_tb3_world/my_tb3_world/: digital_twin_state_node.py  environment_node.py  gazebo_twin.launch.pyZone.Identifier  goal_navigation_node.py  goal_navigation_node.pyZone.Identifier  mission_planner_node.py  objectAvoidance_node.py  publisher_node.py  robot_state_node.py  stateSync_node.py  subscriber_node.py  twin_input_node.py
src/my_tb3_world/params/: nav2_params.yaml
src/my_tb3_world/test/: test_my_tb3_world_nodes.py
src/my_tb3_world/worlds/: new_world.world
src/tb3_safety_stop/: package.xml  setup.cfg  setup.py
src/tb3_safety_stop/launch/: gazebo_twin.launch.py  safety_stop.launch.py  twin_safety.launch.py
src/tb3_safety_stop/tb3_safety_stop/: safety_stop_node.py  twin_safety_node.py
src/tb3_weather_dt/: setup.py
src/tb3_weather_dt/tb3_weather_dt/: twin_safety_supervisor.py  weather_adapter.py
