<?xml version="1.0"?>
<package format="3">
  <name>coral_g_interfaces</name>
  <version>0.1.0</version>
  <description>Service interfaces for the CORAL-G digital twin proof of concept.</description>
  <maintainer email="team@example.com">CORAL-G Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
