<?xml version="1.0"?>
<package format="3">
  <name>tb3_safety_stop</name>
  <version>0.0.1</version>
  <description>TurtleBot3 Burger safety stop using lidar and TwistStamped</description>
  <maintainer email="you@example.com">your_name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
 
